--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ashleyplevi/autocomplete": "^1.1.1",
     "node-sass": "^4.9.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-scripts": "2.0.5"
   },
   "scripts": {
@@ -24,6 +25,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.7.0"
+    "eslint": "^5.8.0"
   }
 }
